Mega-refactor
Co-authored-by: MarinDavide <marin.davide03@gmail.com>
Co-authored-by: Davide Martinelli <149704818+davim02@users.noreply.github.com>